syntax = "proto3";

package stwartchain.stats;

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/stats/types";
import "stwartchain/stats/asset_stats.proto";
import "gogoproto/gogo.proto";

message AssetStats {
  AssetDailyStats dailyStats = 1;
}

